# libjpeg-turbo-cmake-build-template

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
.github/workflows/: test.yml
